2008-08-25  Dave Brolley  <brolley@redhat.com>

	* systemtap.base/warnings.exp: Allow 30 seconds for completion.
	* Makefile.in: Regenerated.

2008-08-22  Wenji Huang  <wenji.huang@oracle.com>

	* buildok/process-all-probes.stp: Change system-wide probes to detailed 	ones to avoid including user space ones.

2008-08-15  David Smith  <dsmith@redhat.com>

	* systemtap.base/utrace_p4.exp: Change system-wide probes from
	'process("*").begin' to 'process.begin'.

2008-08-13  Dave Brolley  <brolley@redhat.com>

	* lib/systemtap.exp (setup_systemtap_environment): client_path is now
	global.
	(systemtap_exit): Remove the directory named by $client_path.

2008-08-12  David Smith  <dsmith@redhat.com>

	PR 6445 (partial)
	* systemtap.base/utrace_p4.exp: Added test that probes all threads.
	* semko/utrace14.stp: New test.

2008-08-11  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/vars.exp: Adjust to loss of "\n" at end of $$vars
	et al.

2008-08-11  Frank Ch. Eigler  <fche@elastic.org>

	PR5049
	* semok/thirtyone.stp: New test.

2008-08-08  Dave Brolley  <brolley@redhat.com>

	* lib/systemtap.exp (setup_systemtap_environment): If use_server_p,
	start or find a systemtap server.
	(systemtap_exit): If we started a server, stop it.
	* Makefile.am (EXTRA_SYSTEMTAP_PATH): Removed.
	(EXTRA_TOOL_OPTS): Removed.
	* Makefile.in: Regenerated.

2008-08-08  Stan Cox  <scox@redhat.com>

	* systemtap.base/stmt_rel.stp: Lower wildcard matching count.

2008-08-07  David Smith  <dsmith@redhat.com>

	* systemtap.base/utrace_p4.exp: Uses lib/stap_compile.exp instead
	of its own stap_compile procedure.
	* systemtap.base/cache.exp (stap_compile): Ignores warnings.
	* lib/stap_compile.exp: Ignores warnings.

2008-08-05  Mark Wielaard  <mwielaard@redhat.com>

	* systemtap.examples/README: Add meta file tag descriptions.

2008-08-05  Stan Cox  <scox@redhat.com>

	* systemtap.base/warnings.stp: Use relative instead of absolute line.
	* systemtap.base/vars.exp: New test.
